--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Navegação -->
     <nav>
       <!-- Botão do menu hamburger -->
-      <button class="menu-toggle" aria-expanded="true" aria-controls="menu-list">☰ Menu</button>
+      <button class="menu-toggle" aria-expanded="false" aria-controls="menu-list">☰ Menu</button>
       <!-- Lista do menu -->
       <ul class="menu__list" id="menu-list">
         <!-- Itens do menu -->
