--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Meu nome é Willian, desenvolvo interfaces modernas e de alta qualidade, concentrado em performance, animações, responsividade e SEO."
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
     <!-- Importação da folha de estilo -->
     <link rel="stylesheet" href="style.css" />
     <!-- Título da página -->
@@ -25,7 +27,10 @@
     <!-- Navegação -->
     <nav>
       <!-- Botão do menu hamburger -->
-      <button class="menu-toggle" aria-expanded="false" aria-controls="menu-list">☰ Menu</button>
+      <button class="menu-toggle" aria-expanded="false" aria-controls="menu-list">
+        <i class="fas fa-bars"></i> <!-- Ícone do menu -->
+      </button>
+      
       <!-- Lista do menu -->
       <ul class="menu__list" id="menu-list">
         <!-- Itens do menu -->
